[package]
name = "vidsynt"
authors = ["https://github.com/James2022-rgb"]
license = "MIT"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
tracing = { version = "0.1", features = ["log"] }
bitstream-io = "2.2.0"
serde = { version = "1", features = ["derive"], optional = true }
